vlib/v/checker/tests/infix_is_unknown_generic_concrete_type_forward_decl_err.vv
interface Value {}

fn main() {
	v := Value(Box[int]{})
	if v is Box[Missing] {
		println('yes')
	}
}

struct Box[T] {
	val T
}
